--- a/shopping_manager/shopping_manager_web/src/main/resources/properties/db.properties
+++ b/shopping_manager/shopping_manager_web/src/main/resources/properties/db.properties
@@ -1,4 +1,4 @@
 jdbc_url=jdbc:mysql://localhost:3306/manong?characterEncoding=utf-8
 jdbc_user=root
-jdbc_password=
+jdbc_password=123
 jdbc_driver=com.mysql.jdbc.Driver
