--- a/shopping_parent/pom.xml
+++ b/shopping_parent/pom.xml
@@ -28,10 +28,38 @@
         <druid.version>1.0.9</druid.version>
         <mysql.version>5.1.32</mysql.version>
         <jackson-databind>[2.8.11.1,)</jackson-databind>
+        <fastdfs.version>1.27-SNAPSHOT</fastdfs.version>
+        <commons-fileupload>1.3.1</commons-fileupload>
+        <commons-io>2.2</commons-io>
+        <commons-lang3>3.1</commons-lang3>
     </properties>
 
     <dependencyManagement>
     <dependencies>
+        <dependency>
+          <groupId>org.csource</groupId>
+          <artifactId>fastdfs-client-java</artifactId>
+          <version>${fastdfs.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>commons-fileupload</groupId>
+            <artifactId>commons-fileupload</artifactId>
+            <version>${commons-fileupload}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>${commons-io}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>${commons-lang3}</version>
+        </dependency>
+
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
