--- a/shopping_parent/pom.xml
+++ b/shopping_parent/pom.xml
@@ -32,6 +32,9 @@
         <commons-fileupload>1.3.1</commons-fileupload>
         <commons-io>2.2</commons-io>
         <commons-lang3>3.1</commons-lang3>
+        <commons-codec>1.6</commons-codec>
+        <json.version>1.1</json.version>
+        <ueditor.version>1.1.2</ueditor.version>
     </properties>
 
     <dependencyManagement>
@@ -124,6 +127,24 @@
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
             <version>${jackson-databind}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>${commons-codec}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.json</groupId>
+            <artifactId>json</artifactId>
+            <version>${json.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.baidu</groupId>
+            <artifactId>ueditor</artifactId>
+            <version>${ueditor.version}</version>
         </dependency>
     </dependencies>
     </dependencyManagement>
