--- a/shop_manager/shop_manager_web/pom.xml
+++ b/shop_manager/shop_manager_web/pom.xml
@@ -51,6 +51,12 @@
         <groupId>com.baidu</groupId>
         <artifactId>ueditor</artifactId>
     </dependency>
+
+    <dependency>
+        <groupId>javax.servlet</groupId>
+        <artifactId>servlet-api</artifactId>
+        <scope>provided</scope>
+    </dependency>
 </dependencies>
 
 </project>
