--- a/shop_parent/pom.xml
+++ b/shop_parent/pom.xml
@@ -35,6 +35,7 @@
         <commons-codec>1.6</commons-codec>
         <json.version>1.1</json.version>
         <ueditor.version>1.1.2</ueditor.version>
+        <servlet.version>2.5</servlet.version>
     </properties>
 
     <dependencyManagement>
@@ -145,6 +146,12 @@
             <groupId>com.baidu</groupId>
             <artifactId>ueditor</artifactId>
             <version>${ueditor.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>servlet-api</artifactId>
+            <version>${servlet.version}</version>
         </dependency>
     </dependencies>
     </dependencyManagement>
