--- a/shop_parent/pom.xml
+++ b/shop_parent/pom.xml
@@ -36,10 +36,22 @@
         <json.version>1.1</json.version>
         <ueditor.version>1.1.2</ueditor.version>
         <servlet.version>2.5</servlet.version>
+        <freemarker.version>2.3.28</freemarker.version>
     </properties>
 
     <dependencyManagement>
     <dependencies>
+        <dependency>
+            <groupId>org.freemarker</groupId>
+            <artifactId>freemarker</artifactId>
+            <version>${freemarker.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context-support</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+
         <dependency>
           <groupId>org.csource</groupId>
           <artifactId>fastdfs-client-java</artifactId>
