--- a/shop_manager/shop_manager_web/pom.xml
+++ b/shop_manager/shop_manager_web/pom.xml
@@ -12,6 +12,15 @@
     <artifactId>shop_manager_web</artifactId>
 <dependencies>
     <dependency>
+        <groupId>org.freemarker</groupId>
+        <artifactId>freemarker</artifactId>
+    </dependency>
+    <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-context-support</artifactId>
+    </dependency>
+
+    <dependency>
         <groupId>com.lly</groupId>
         <artifactId>shop_manager_service</artifactId>
         <version>1.0-SNAPSHOT</version>
