--- a/shop_manager/shop_manager_service/pom.xml
+++ b/shop_manager/shop_manager_service/pom.xml
@@ -49,6 +49,10 @@
             <artifactId>spring-beans</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>com.github.pagehelper</groupId>
+            <artifactId>pagehelper</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
